Fixed bet-text issue where it was too high on the chip

--- a/src/stylesheets/Layout.css
+++ b/src/stylesheets/Layout.css
@@ -255,13 +255,13 @@
     font-size: 1vmin;
     color: rgb(22, 22, 22);
     z-index: 100;
-    padding-bottom: 1.8vmin;
+    /* padding-bottom: 1.8vmin; */
     text-shadow: 0px 0px 1px white;
 }
 
-.dozen-chip {
+/* .dozen-chip {
     
-}
+} */
 
 .winning-num {
     animation-name: flashingNumber;
